tests/miniJava/neg/002929_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = this class java { public static void Main ( String [ ] java ) { { } } } ; } }
